# parlant-client-python

./: .gitignore  Justfile  README.md  pyproject.toml
src/parlant/client/: __init__.py  client.py
src/parlant/client/agents/: client.py
src/parlant/client/canned_responses/: client.py
src/parlant/client/capabilities/: client.py
src/parlant/client/context_variables/: client.py
src/parlant/client/tags/: client.py
src/parlant/core/: common.py  contextual_correlator.py  emissions.py  sessions.py  tools.py
src/parlant/types/: __init__.py  connection_proposition.py  connection_proposition_dto_check_kind.py  context_variable_value_dto_data_five_value.py  context_variable_value_dto_data_item.py  create_agent_response.py  create_context_variable_response.py  create_evaluation_response.py  create_interactions_response.py  create_sdk_service_request.py  create_session_response.py  create_term_response.py  data.py  delete_context_variable_reponse.py  delete_events_response.py  delete_service_response.py  event_source_dto.py  interaction.py  invoice.py  kind.py  list_agents_response.py  list_context_variables_response.py  list_events_response.py  list_interactions_response.py  list_services_response.py  list_sessions_response.py  moderation.py  operation.py  preparation_iteration.py  read_interaction_response.py  service.py  tool_parameter.py  tool_parameter_dto_enum_item.py  tool_service_kind.py  update_context_variable_value_response.py
tests/: basic_client.py  conftest.py  example_plugin.py  test_client.py  test_utilities.py
wheels/: parlant-0.4.1a1-py3-none-any.whl
(+204 files in other folders)
