[tool.poetry]
name = "parlant-client"
version = "0.2.1"
description = "Parlant Client SDK"
authors = ["MCNatsu <nathan@emcie.co>"]
readme = "README.md"
packages = [{ include = "parlant", from = "src" }]

[tool.poetry.dependencies]
httpx = "^0.27.0"
pydantic = "^2.9.2"
python = "^3.12"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
ruff = "^0.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
