[tool.poetry]
name = "parlant-client"
version = "3.2.0"
license = "Apache-2.0"
description = "Python API client for Parlant (https://parlant.io)"
authors = ["Yam Marcovitz <yam@emcie.co>", "Dor Zohar <dor@emcie.co>", "Nathan Dortman <nathan@emcie.co>"]
readme = "README.md"
packages = [{ include = "parlant", from = "src" }]

[tool.poetry.dependencies]
httpx = "^0.28.1"
mypy = "^1.11.1"
pydantic = "^2.9.2"
python = ">=3.10"
nanoid = "^2.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
ruff = "^0.5.6"
pytest = "^9.0.3"
Pygments = ">=2.20.0"
fastapi = "^0.120.0"
uvicorn = "^0.32.1"
starlette = ">=0.49.1"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
